# scholarpilot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.sp-api.yml  docker-compose.yml
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/migrations/: v1_initial.sql  v2_llm_run_jobs.sql
client/src-tauri/src/: lib.rs  main.rs  pdf_fetcher.rs
client/src-tauri/src/commands/: db.rs  fs.rs  mod.rs  paths.rs  secure_storage.rs
sp-api/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sp-api/alembic/: env.py
sp-api/alembic/versions/: 0001_sp_api_initial.py  0002_user_notification_settings.py
sp-api/app/: config.py  database.py  dependencies.py  main.py
sp-api/app/api/: admin_users.py  auth.py  document_import.py  fetcher.py  fulltext.py  notifications.py  site_feedback.py  stream.py  telemetry.py  user_documents.py
sp-api/app/middleware/: client_meta.py
sp-api/app/models/: __init__.py  dev_log.py  document_import_job.py  invitation_code.py  refresh_token.py  site_feedback.py  user.py  user_document.py  user_notification_setting.py
sp-api/app/schemas/: auth.py
sp-api/app/services/: auth_tokens.py  event_bus.py  feishu_notify.py  fulltext_service.py  health_cache.py  patenthub_budget.py  source_config_store.py  telegram_notify.py  telemetry.py
sp-api/app/services/core/: __init__.py
sp-api/app/services/devtools/: log_writer.py
sp-api/app/services/fetchers/: base.py  chinese.py  crossref.py  dblp.py  duckduckgo.py  github_search.py  international.py  lens.py  patenthub.py  stackexchange.py  tavily.py  types.py  wikipedia.py  (+1 more)
sp-api/app/workers/: celery_app.py  devtools_tasks.py  fulltext_tasks.py  import_tasks.py
sp-api/loadtest/: README.md  REPORT.md  loadtest.k6.js  loadtest.locustfile.py  summary.json
sp-api/tests/: test_admin_routes.py  test_auth_routes.py  test_fetchers.py  test_fetchers_new.py  test_fulltext_proxy.py  test_imports.py  test_notifications.py
(+749 files in other folders)
